--- a/src/assets/css/variables.less
+++ b/src/assets/css/variables.less
@@ -1,5 +1,6 @@
 @yellow: #FDC844;
-@pink: #FF2351;
+@orange: #cb842e;
+@pink: #da0c6c;
 @dark-grey: #848484;
 @light-grey: #DADADA;
 @light-yellow: #FDC8444D;
